fix: Fix color block flying overflow the window

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,9 @@
 
 html,
 body {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
     background-color: var(--bg-color);
     color: var(--text-color);
     font-family: Arial, sans-serif;
